--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app/app.js",
   "scripts": {
-    "start": "node ./node_modules/babel-cli/bin/babel-node.js index.js",
+    "start": "node ./node_modules/babel-cli/bin/babel-node.js app/app.js",
     "dev": "nodemon app/app.js --exec babel-node",
     "build": "babel app -d dist",
     "serve": "node dist/app.js"
