--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "botbuilder": "^3.13.1",
+    "botbuilder-cognitiveservices": "^1.1.0",
     "restify": "^6.3.4"
   }
 }
